--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -5,6 +5,7 @@
   "corsUrl": "https://myaces.nus.edu.sg/cors/jsp/report/ModuleDetailedInfo.jsp?acad_y=2014/2015&sem_c=1&mod_c=",
   "ivleUrl": "http://ivle.nus.edu.sg/lms/public/list_course_public.aspx?code=<ModuleCode>",
   "disqusShortname": "nusmods-prod",
+  "facebookAppID": "1524196174461544",
   "semesterNames": [
     "Semester 1",
     "Semester 2",
