--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "backbone.picky": "~0.2.0",
     "bootstrap-sass-official": "~3.2.0",
     "font-awesome": "~4.2.0",
+    "firebase": "~1.1.3",
     "jasny-bootstrap": "~3.1.3",
     "jquery.fileDownload": "johnculviner/jquery.fileDownload#fc5f120a952213987ea4567ce8a22e105a926dc1",
     "jquery.ui": "~1.11.1",
