--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "bootstrap/popover": "./app/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js",
     "bootstrap/tooltip": "./app/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js",
     "bootstrap/transition": "./app/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js",
+    "firebase": "./app/bower_components/firebase/firebase.js",
     "jquery-ui-touch-punch": "./app/bower_components/jqueryui-touch-punch/jquery.ui.touch-punch.js",
     "jquery-ui/core": "./app/bower_components/jquery.ui/ui/core.js",
     "jquery-ui/draggable": "./app/bower_components/jquery.ui/ui/draggable.js",
