--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,21 @@
   "name": "NUSMods",
   "private": true,
   "dependencies": {
-    "animate.css": "~3.2.0",
+    "animate.css": "~3.2.6",
     "backbone.picky": "~0.2.0",
-    "bootstrap-sass-official": "~3.3.0",
-    "font-awesome": "~4.2.0",
+    "bootstrap-sass-official": "~3.3.4",
+    "font-awesome": "~4.3.0",
     "jasny-bootstrap": "~3.1.3",
-    "jquery.fileDownload": "johnculviner/jquery.fileDownload#fc5f120a952213987ea4567ce8a22e105a926dc1",
-    "jquery.ui": "~1.11.1",
-    "jqueryui-touch-punch": "#8f7559b6e65cdc3ee3648d5fe76d38c653f87ff5",
+    "jquery-file-download": "~1.4.3",
+    "jquery.ui": "~1.11.4",
+    "jqueryui-touch-punch": "#4bc009145202d9c7483ba85f3a236a8f3470354d",
     "localforage": "ahbeng/localForage#2da72b902fb55866f6a4c0415970931d94d98592",
-    "moment": "~2.8.4",
-    "mousetrap": "~1.4.6",
-    "qtip2": "~2.2.0",
-    "raven-js": "~1.1.16",
-    "select2": "~3.5.1",
-    "select2-bootstrap-css": "~1.4.1"
+    "moment": "~2.9.0",
+    "mousetrap": "~1.5.2",
+    "qtip2": "~2.2.1",
+    "raven-js": "~1.1.18",
+    "select2": "~3.5.2",
+    "select2-bootstrap-css": "~1.4.6"
   },
   "devDependencies": {}
 }
